--- a/pokemon-api/package.json
+++ b/pokemon-api/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
-    "sequelize": "^6.37.1"
+    "sequelize": "^6.37.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
